--- a/src/index.html
+++ b/src/index.html
@@ -96,9 +96,11 @@
                 <p class="nav-shop-colors">
                   <a href="#linke-blonde-title">Shop</a>
                 </p>
-                <p class="nav-point-colors">Point de Vente</p>
+                <p class="nav-point-colors">
+                  <a href="#linke-contact"> Point de Vente</a>
+                </p>
                 <p class="nav-contact-colors">
-                  <a href="#linke-contact"></a>Contact
+                  <a href="#linke-contact"> Contact</a>
                 </p>
               </nav>
             </div>
@@ -168,6 +170,7 @@
                 <div class="text-invisible">
                   <p class="beers-information">
                     <strong>en verre de 33 cl</strong> <br />
+                    <br />
                     "Dans les abysses, seules les sirènes à deux têtes
                     <br />savourent les bières blondes, unissant leur essence
                     <br />
@@ -221,6 +224,7 @@
                 <div class="text-invisible">
                   <p class="brown-beers-information">
                     <strong>en verre de 33 cl</strong> <br />
+                    <br />
                     “Dans les récits marins, seuls les pirates squelettes <br />
                     s'accordent le privilège des bières rousses. Réunis dans
                     <br />
@@ -268,6 +272,7 @@
                   <br />
                   <p class="beers-information-ipa">
                     <strong>en verre de 33 cl</strong> <br />
+                    <br />
                     “Dans les récits marins, seule la légendaire créature du
                     <br />
                     Kraken peut se délecter d'une bière IPA. Au cœur des <br />
@@ -309,10 +314,17 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <img class="title" src="img/bouteilles/logo_BLANC.png" alt="" />
+            <img
+              class="title"
+              src="img/bouteilles/logo_BLANC.png"
+              alt="titre licorne"
+            />
             <p class="place" id="linke-contact">
               <strong>Adresse de la Brasserie:</strong> <br />
-              Licorne Sylvain Megroni, Chemin du Lac 2 CH-1470 Estavayer-Le-Lac
+              <br />
+              Licorne Sylvain Megroni, <br />
+              Chemin du Lac 2 CH-1470 <br />
+              Estavayer-Le-Lac
             </p>
             <p class="conditions">
               Politique de confidentialité <br />
