PPRO-ajustement des position des informations des bières et des bouttons

--- a/src/index.html
+++ b/src/index.html
@@ -140,7 +140,7 @@
     <main>
       <div class="container">
         <div class="row">
-          <div class="col">
+          <div class="col-6">
             <div class="beers-blonde">
               <div class="blonde">
                 <h3 class="blonde-title" id="linke-blonde-title">La Blonde</h3>
@@ -160,15 +160,19 @@
                 <div class="the-price">
                   <p class="blonde-price">Prix au pack de 4</p>
                   <div class="counter-container">
-                    <button class="btn-decrement" id="decrement">-</button>
+                    <button class="blonde-btn-decrement" id="decrement">
+                      -
+                    </button>
                     <span class="counter" id="counter">0</span>
-                    <button class="btn-decrement" id="increment">+</button>
+                    <button class="blonde-btn-decrement" id="increment">
+                      +
+                    </button>
                   </div>
                   <p class="blonde-the-price">16 CHF</p>
                 </div>
 
                 <div class="text-invisible">
-                  <p class="beers-information">
+                  <p class="blonde-beers-information">
                     <strong>en verre de 33 cl</strong> <br />
                     <br />
                     "Dans les abysses, seules les sirènes à deux têtes
@@ -177,14 +181,14 @@
                     unique autour de cette boisson pétillante, symbole <br />
                     de leur camaraderie sous-marine.”
                   </p>
-                  <p class="beers-ingredients">
+                  <p class="blonde-beers-ingredients">
                     <strong>Ingrédients</strong> <br />
                     Eau, malt d’orge, colorant : E150c, arôme naturel, <br />
                     houblon. <br />
                     Allergènes: Gluten 0%
                   </p>
                   <img
-                    class="beers-bottle"
+                    class="blonde-beers-bottle"
                     src="img/autre-siteweb/bouteille-Blonde 1.png"
                     alt=""
                   />
@@ -232,14 +236,14 @@
                     partagent cette boisson ambrée, célébrant leur immortalité
                     <br />et leur lien éternel avec l'océan.”
                   </p>
-                  <p class="beers-ingredients">
+                  <p class="brown-beers-ingredients">
                     <strong>Ingrédients</strong> <br />
                     Eau, malt torréfié d’orge, malt torifié de blé, <br />
                     houblon. <br />
                     Allergène: Gluten 0%
                   </p>
                   <img
-                    class="beers-bottle"
+                    class="brown-beers-bottle"
                     src="img/bouteilles/bouteille-rousse.png"
                     alt=""
                   />
@@ -270,7 +274,7 @@
                 </div>
                 <div class="text-invisible">
                   <br />
-                  <p class="beers-information-ipa">
+                  <p class="ipa-beers-information">
                     <strong>en verre de 33 cl</strong> <br />
                     <br />
                     “Dans les récits marins, seule la légendaire créature du
@@ -279,14 +283,14 @@
                     abysses, ce monstre des profondeurs savoure cette <br />
                     boisson amère, symbole de sa suprématie sur les océans.”
                   </p>
-                  <p class="beers-ingredients-ipa">
+                  <p class="ipa-beers-ingredients">
                     <strong>Ingrédients</strong> <br />
                     Eau, malt torréfié d’orge, malt torifié de blé, <br />
                     houblon. <br />
                     Allergène: Gluten 0%
                   </p>
                   <img
-                    class="beers-bottle"
+                    class="ipa-beers-bottle"
                     src="img/bouteilles/bouteille-IPA.png"
                     alt=""
                   />
@@ -343,7 +347,7 @@
             />
 
             <div class="link-web">
-              <div class="little-informations">
+              <div class="litle-informations">
                 <p>www.brasserie-licorne.ch</p>
                 <p>© 2024 Licorne. Tous droits réservés.</p>
               </div>
