PPRO-ajustement de la première nav

--- a/src/index.html
+++ b/src/index.html
@@ -22,29 +22,28 @@
     <header>
       <div class="container">
         <div class="row">
-          <div class="col-4">
-            <h1>
-              <img
-                class="title"
-                src="img/bouteilles/logo_BLANC.png"
-                alt="Logo de la marque"
-              />
-            </h1>
-
-            <div class="container">
-              <div class="col-8">
-                <div class="nav">
-                  <nav>
-                    <select name="langage-button" id="nav">
-                      <option value="nav">FR</option>
-                      <option value="nav">DE</option>
-                      <option value="nav">EN</option>
-                    </select>
-                    <p class="nav-first-newsletter">Newsletter</p>
-                    <p class="nav-first-conexion">Connexion</p>
-                    <p class="nav-first-shop">Panier</p>
-                  </nav>
-                </div>
+          <div class="nav-information">
+            <div class="col-4">
+              <h1>
+                <img
+                  class="title"
+                  src="img/bouteilles/logo_BLANC.png"
+                  alt="Logo de la marque"
+                />
+              </h1>
+            </div>
+            <div class="col-8">
+              <div class="nav">
+                <nav>
+                  <select name="langage-button" id="nav">
+                    <option value="nav">FR</option>
+                    <option value="nav">DE</option>
+                    <option value="nav">EN</option>
+                  </select>
+                  <p class="nav-first-newsletter">Newsletter</p>
+                  <p class="nav-first-conexion">Connexion</p>
+                  <p class="nav-first-shop">Panier</p>
+                </nav>
               </div>
             </div>
           </div>
