PPRO-ajout d'une transition fluide et smooth au lien

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,9 @@
                     <option value="nav">DE</option>
                     <option value="nav">EN</option>
                   </select>
-                  <p class="nav-first-newsletter">Newsletter</p>
+                  <p class="nav-first-newsletter">
+                    <a href="#newletter-title"> Newsletter</a>
+                  </p>
                   <p class="nav-first-conexion">Connexion</p>
                   <p class="nav-first-shop">Panier</p>
                 </nav>
@@ -300,7 +302,7 @@
             </div>
           </div>
           <div class="col-4">
-            <h3 class="newletter-title">Newsletter</h3>
+            <h3 class="newletter-title" id="newletter-title">Newsletter</h3>
           </div>
           <div class="col-10">
             <div class="newsletter">
