PPRO-ajout des liens insta et tiktok à ma vidéo

--- a/src/index.html
+++ b/src/index.html
@@ -336,17 +336,18 @@
               Politique de confidentialité <br />
               Conditions générales de vente
             </p>
-
-            <img
-              class="mini-instagrame"
-              src="img/autre-siteweb/instagram-logo-white-370x370.png"
-              alt="logo instagrame"
-            />
-            <img
-              class="mini-tiktok"
-              src="img/autre-siteweb/tiktok-logo-blanc.png"
-              alt="logo tiktok"
-            />
+            <a href="https://www.instagram.com/reel/C8aLbq9NLla/">
+              <img
+                class="mini-instagrame"
+                src="img/autre-siteweb/instagram-logo-white-370x370.png"
+                alt="logo instagrame"
+            /></a>
+            <a href="https://vm.tiktok.com/ZGeg6oMtR/">
+              <img
+                class="mini-tiktok"
+                src="img/autre-siteweb/tiktok-logo-blanc.png"
+                alt="logo tiktok"
+            /></a>
 
             <div class="link-web">
               <div class="litle-informations">
