PPRO-ajustement des bouton_TERMINER

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
   </head>
   <body>
     <header>
+      <button class="button-brown">Ajouter au Panier</button>
       <div class="container">
         <div class="row">
           <div class="nav-information">
@@ -172,7 +173,6 @@
                   </div>
                   <p class="blonde-the-price">16 CHF</p>
                 </div>
-
                 <div class="text-invisible">
                   <p class="blonde-beers-information">
                     <strong>en verre de 33 cl</strong> <br />
